fixed bug that made signup modal too large and added tooltip for transfers

--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -2,7 +2,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 70vh;
 }
 
 #inner-signup-page {
